syntax = "proto3";

service Api {
  rpc Bootstrap(BoostrapRequest) returns (BootstrapResponse);
  rpc BootstrapProgress(BootstrapProgressRequest) returns (BootstrapProgressResponse);
}

message BoostrapRequest {
}

message BootstrapResponse {
  string id = 1;
}

message BootstrapProgressRequest {
  string id = 1;
}

message BootstrapProgressResponse {
  int32 progress = 1;
}
